--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,12 +5,6 @@
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -24,3 +18,128 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@theme {
+  --color-border: hsl(var(--border));
+  --color-input: hsl(var(--input));
+  --color-ring: hsl(var(--ring));
+  --color-background: hsl(var(--background));
+  --color-foreground: hsl(var(--foreground));
+
+  --color-primary: var(--color-blue-500);
+  --color-primary-50: var(--color-blue-50);
+  --color-primary-100: var(--color-blue-100);
+  --color-primary-200: var(--color-blue-200);
+  --color-primary-300: var(--color-blue-300);
+  --color-primary-400: var(--color-blue-400);
+  --color-primary-500: var(--color-blue-500); 
+  --color-primary-600: var(--color-blue-600);
+  --color-primary-700: var(--color-blue-700);
+  --color-primary-800: var(--color-blue-800);
+  --color-primary-900: var(--color-blue-900);
+
+  --color-secondary: var(--color-purple-600);
+  --color-secondary-50: var(--color-purple-50);
+  --color-secondary-100: var(--color-purple-100);
+  --color-secondary-200: var(--color-purple-200);
+  --color-secondary-300: var(--color-purple-300);
+  --color-secondary-400: var(--color-purple-400);
+  --color-secondary-500: var(--color-purple-500); 
+  --color-secondary-600: var(--color-purple-600);
+  --color-secondary-700: var(--color-purple-700);
+  --color-secondary-800: var(--color-purple-800);
+  --color-secondary-900: var(--color-purple-900);
+
+
+
+  --color-neutral-50: #e6e7e7;
+  --color-neutral-100: #dbdbdc;
+  --color-neutral-150: #cfd0d1;
+  --color-neutral-200: #c5c9d9;
+  --color-neutral-250: #b8b9ba;
+  --color-neutral-300: #acadaf;
+  --color-neutral-325: #aaa;
+  --color-neutral-350: #a0a2a4;
+  --color-neutral-400: #959699;
+  --color-neutral-450: #8498a8;
+  --color-neutral-500: #7e8083;
+  --color-neutral-550: #727478;
+  --color-neutral-600: #66696d;
+  --color-neutral-650: #5b5d62;
+  --color-neutral-675: #4c5266;
+  --color-neutral-700: #494e5b;
+  --color-neutral-725: #43464c;
+  --color-neutral-750: #474747;
+  --color-neutral-800: #383b40;
+  --color-neutral-825: #282e38;
+  --color-neutral-840: #292929;
+  --color-neutral-850: #2d3445;
+  --color-neutral-875: #282c42;
+  --color-neutral-900: #1b2232;
+  --color-neutral-925: #1c1f28;
+  --color-neutral-950: #171b29;
+  --color-neutral-975: #171717;
+  --color-neutral-dark-60: #181f2f;
+  --color-neutral-dark-65: #10151f;
+  --color-neutral-dark-70: #0d121c;
+  --color-neutral-dark-75: #0b0f17;
+  --color-neutral-dark-80: #06080d;
+  --color-neutral-dark-85: #0a0d14;
+  --color-neutral-dark-90: #070a0f;
+  --color-neutral-dark-95: #020305;
+
+  --color-gradient: linear-gradient(90deg, #06080D 0%, #0D121C 100%);
+
+  --color-background: var(--color-secondary-900);
+
+  --color-primary-foreground: hsl(var(--primary-foreground));
+
+
+  --color-destructive: hsl(var(--destructive));
+  --color-destructive-foreground: hsl(var(--destructive-foreground));
+
+  --color-muted: hsl(var(--muted));
+  --color-muted-foreground: hsl(var(--muted-foreground));
+
+  --color-accent: hsl(var(--accent));
+  --color-accent-foreground: hsl(var(--accent-foreground));
+
+  --color-popover: hsl(var(--popover));
+  --color-popover-foreground: hsl(var(--popover-foreground));
+
+  --color-card: hsl(var(--card));
+  --color-card-foreground: hsl(var(--card-foreground));
+
+  --radius-lg: var(--radius);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-sm: calc(var(--radius) - 4px);
+
+  --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --animate-accordion-down: accordion-down 0.2s ease-out;
+  --animate-accordion-up: accordion-up 0.2s ease-out;
+ 
+}
+
+@keyframes accordion-down {
+  from { height: 0; }
+  to { height: var(--radix-accordion-content-height); }
+}
+
+@keyframes accordion-up {
+  from { height: var(--radix-accordion-content-height); }
+  to { height: 0; }
+}
+
+
+/* 
+@container {
+  center: true;
+  padding: 2rem;
+  screens: {
+    2xl: 1400px;
+  }
+} */
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+
