--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,29 +26,29 @@ body {
   --color-background: hsl(var(--background));
   --color-foreground: hsl(var(--foreground));
 
-  --color-primary: var(--color-blue-500);
-  --color-primary-50: var(--color-blue-50);
-  --color-primary-100: var(--color-blue-100);
-  --color-primary-200: var(--color-blue-200);
-  --color-primary-300: var(--color-blue-300);
-  --color-primary-400: var(--color-blue-400);
-  --color-primary-500: var(--color-blue-500); 
-  --color-primary-600: var(--color-blue-600);
-  --color-primary-700: var(--color-blue-700);
-  --color-primary-800: var(--color-blue-800);
-  --color-primary-900: var(--color-blue-900);
+  --color-primary1: var(--color-blue-500);
+  --color-primary1-50: var(--color-blue-50);
+  --color-primary1-100: var(--color-blue-100);
+  --color-primary1-200: var(--color-blue-200);
+  --color-primary1-300: var(--color-blue-300);
+  --color-primary1-400: var(--color-blue-400);
+  --color-primary1-500: var(--color-blue-500); 
+  --color-primary1-600: var(--color-blue-600);
+  --color-primary1-700: var(--color-blue-700);
+  --color-primary1-800: var(--color-blue-800);
+  --color-primary1-900: var(--color-blue-900);
 
-  --color-secondary: var(--color-purple-600);
-  --color-secondary-50: var(--color-purple-50);
-  --color-secondary-100: var(--color-purple-100);
-  --color-secondary-200: var(--color-purple-200);
-  --color-secondary-300: var(--color-purple-300);
-  --color-secondary-400: var(--color-purple-400);
-  --color-secondary-500: var(--color-purple-500); 
-  --color-secondary-600: var(--color-purple-600);
-  --color-secondary-700: var(--color-purple-700);
-  --color-secondary-800: var(--color-purple-800);
-  --color-secondary-900: var(--color-purple-900);
+  --color-primary2: var(--color-purple-600);
+  --color-primary2-50: var(--color-purple-50);
+  --color-primary2-100: var(--color-purple-100);
+  --color-primary2-200: var(--color-purple-200);
+  --color-primary2-300: var(--color-purple-300);
+  --color-primary2-400: var(--color-purple-400);
+  --color-primary2-500: var(--color-purple-500); 
+  --color-primary2-600: var(--color-purple-600);
+  --color-primary2-700: var(--color-purple-700);
+  --color-primary2-800: var(--color-purple-800);
+  --color-primary2-900: var(--color-purple-900);
 
 
 
@@ -90,7 +90,7 @@ body {
 
   --color-gradient: linear-gradient(90deg, #06080D 0%, #0D121C 100%);
 
-  --color-background: var(--color-secondary-900);
+  --color-background: var(--color-primary2 -900);
 
   --color-primary-foreground: hsl(var(--primary-foreground));
 
@@ -139,6 +139,31 @@ body {
     2xl: 1400px;
   }
 } */
+
+::-webkit-scrollbar{
+  width: 0.5rem;
+  background-color: transparent;
+  padding: 0.1rem;
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: var(--color-neutral-700);
+  border-radius: 0.5rem;
+  margin: 0.1rem;
+}
+
+
+
+::-webkit-scrollbar-track{
+  padding: 0.1rem;
+}
+
+::-webkit-scrollbar-corner {
+  background: var(--color-neutral-900);
+  height: 0.5rem;
+  width: 0.5rem;
+}
+
 
 @custom-variant dark (&:where(.dark, .dark *));
 
