--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -117,6 +117,12 @@ body {
   --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --animate-accordion-down: accordion-down 0.2s ease-out;
   --animate-accordion-up: accordion-up 0.2s ease-out;
+
+
+  /* Spacing */
+  --synkluna-rag-top-bar-height: 3rem;
+  --synkluna-rag-bottom-bar-height: 60px;
+  --synkluna-rag-padding-x: 1rem;
  
 }
 
