--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-@theme {
+@theme inline {
 
   --synkluna-color-background-dark-1:#111827;
   --synkluna-color-background-dark-2:#000000;
